晶塔交易添加心情值条件；购买可以长按